Fri Apr  1 11:50:59 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* gawkmisc.c (os_iastty): New function.

Sun Feb 13 20:23:34 2011  Eli Zaretskii  <eliz@gnu.org>

	* gawkmisc.c (files_are_same): Change arguments; call `stat' as
	part of the body.

Tue Feb  1 23:05:51 2011  Corinna Vinschen  <vinschen@redhat.com>

	Make values of ctype macros into unsigned char to fix
	warnings found on Cygwin / Newlib.

	* gawkmisc.c (optimal_bufsize): Add cast.

Mon Jan 24 22:21:08 2011  Arnold D. Robbins  <arnold@skeeve.com>

	Everything: Move to ANSI headers on the function definitions.

Mon Jan 24 22:20:43 2011  Corinna Vinschen  <vinschen@redhat.com>

	* gawkmisc.c: Update CYGWIN code.

Wed Nov 24 17:26:24 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* gawkmisc.c (os_close_on_exec): After discussion on the Bash
	list, change the routine to follow POSIX and use read/modify/write
	on the flags value.

Thu May  6 20:55:14 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.8: Release tar file made.

Tue Apr 13 22:38:01 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* gawkmisc.c: Remove use of ISxxx in favor of standard names.

Tue Jul 21 22:28:56 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.7: Release tar file made.

Mon Oct 22 08:49:05 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.6: Release tar file made.

Sun Apr  2 21:43:02 2006  Corinna Vinschen  <vinschen@redhat.com>

	* gawkmisc.c (os_setbinmode): Call `setmode' for Cygwin.
	(cygwin_premain0, cygwin_premain2): Change type of `myself'
	parameter to `void *'.

Sun Mar 12 22:45:11 2006  Corinna Vinschen  <vinschen@redhat.com>

	* gawkmisc.c (cygwin_premain2): New function.
	Fixes CR-LF problem with already open stdin.

Tue Jul 26 21:46:16 2005  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.5: Release tar file made.

Mon Aug  2 12:18:15 2004   Arnold D. Robbins    <arnold@skeeve.com>

	* Release 3.1.4: Release tar file made.
