@@ -1,3 +1,8 @@
+Mon May  2 23:38:06 2011  Corinna Vinschen  <vinschen@redhat.com>
+
+	* gawkmisc.c (cygwin_premain0): Use the real type for the secondnd
+	argument.
+
 Fri Apr  1 11:50:59 2011  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* gawkmisc.c (os_iastty): New function.
